--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -128,8 +128,8 @@ p {
 
 .btn {
   text-transform: uppercase;
-  background: var(--clr-primary-5);
-  color: var(--clr-primary-9);
+  background: rgba(91, 91, 199, 0.789);
+  color: white;
   padding: 0.375rem 0.75rem;
   letter-spacing: var(--spacing);
   display: inline-block;
