--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -173,6 +173,7 @@ p {
   margin: 0 auto;
   max-width: 1170px;
 }
+
 @media screen and (min-width: 992px) {
   .section-center {
     width: 95vw;
@@ -596,9 +597,7 @@ Jobs
   color: var(--clr-primary-5);
   box-shadow: 0 2px var(--clr-primary-5);
 }
-.job-info {
-  /* min-height: 420px; */
-}
+
 .job-info h3 {
   font-weight: 400;
 }
@@ -875,7 +874,7 @@ About Page
 }
 .about-img-svg {
   margin-bottom: 2rem;
-  height: 25rem;
+  /* height: 25rem; */
   width: 100%;
   display: block;
 }
