--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -105,9 +105,9 @@ p {
 
 .paragraph {
   margin: 0 10px;
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   display: block;
-  font-weight: bold;
+  font-weight: lighter;
   color: black;
 }
 
@@ -202,7 +202,7 @@ p {
   margin-top: 2rem;
   width: 15rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .social-link {
   font-size: 1.75rem;
@@ -730,7 +730,13 @@ Projects
 }
 .project-icon {
   color: black;
-  font-size: 4rem;
+  font-size: 3rem;
+  margin-right: 0.5rem;
+  transition: var(--transition);
+}
+.project-icon-github {
+  color: black;
+  font-size: 3.2rem;
   margin-right: 0.5rem;
   transition: var(--transition);
 }
